# codebase-rag-tool

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
jury/: test_indexing.py
src/cli/: main.py
src/core/: ast_parser.py  chunker.py  config.py  embeddings.py  git_handler.py  hybrid_search.py  query_rewriter.py  rag_pipeline.py  response_generator.py
src/qdrant/: qdrant_client.py  schemas.py
src/utils/: helpers.py  logger.py
